k8s/overlays/local/patches/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-important
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    # avoids duplicating the location in the generated conf for '/xxx' and '/xxx/'
    # we are using this mode anyway because we do path prefix stripping
    nginx.ingress.kubernetes.io/use-regex: "true"
    # for dev, allow big networks and long timeouts
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
